# lexm-checker

./: .gitignore  LICENSE  TODOList.md  pyproject.toml
src/lexm_checker/models/: assignment.py  user.py
tests/: assignment_test.py  user_test.py
